k8s/base/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  labels:
    app.kubernetes.io/name: realworld-api
spec:
  selector:
    app.kubernetes.io/name: realworld-api
  ports:
    - name: http
      port: 80
      targetPort: http
